yoshimi 1.7.4 M

2021-1-30 Will
* recoded formatTextLines() in FormatFuncs.h
  can now handle embedded newlines correctly.
* Revised the following banks:
    Will_Godfrey_Collection
    Will_Godfrey_Companion
* Improved layout of part Edit window.

2021-1-29 Will
* aftertouch window can be opened from part edit window
  right click close reopens correct parent.

2021-1-28 Will
* Another attempt to resolve LV2/Main conflicts.

2021-1-27 Will
* Reverted startup to threadmessage style.

2021-1-26 Will
* Converted logging various switches to report on/off.

2021-1-25 Will
* Swapped masterU wincheck() and read_updates().

2021-1-24 Will
* Moved process messages from LV2 and main to misc_gui
* 1st trial of direct instance start from main.

2021-1-23 Will
* BugFix: used invalid type offset (-1)
  goes into endless loop
* Moved console log read from LV2 and main to misc_gui
  also cleaned up code
* Disabled some redundant threadmessage code.

2021-1-23 Will
* Revised the following instrument banks:
    Choir and Voice
    Misc
    Plucked
* Modified main->GUI refreshes.
  corrects high GUI CPU load from previous change.

2021-1-21 Will
* Small code cleanups

2021-1-20 Will
* BugFix: failed to check CLI after code change!
* Revised timing for GUI updates.
  Should resolve LV2 crash.
* Moved GUI process messages in main to be per instance.
  seems to resolve long-standing VU corruption
* Unified CLI instrument type lists.
* GUI unified for instrument type lists.
* Instrument types are now extendable.
  added following types:
    Bells and Chimes
    Single Voice
    Choir
    Wind (other)
    Warm Pad

2021-1-19 Will
* Improved end of text lists ID.
* Revised CLI and Data2text for BPI reporting.
  Setting CLI input as ratio still to do.
* CLI code for setting ratios in place (disabled)
  Don't yet know how to convert to actual value

2021-1-18 Will
* Merged in MIDI LFO sync from Kristian.
* GUI: Small Adsynth voice adjustments.
* GUI: Voice resonance enable now resizes.